--- a/src/Components/Profile/Profile.module.css
+++ b/src/Components/Profile/Profile.module.css
@@ -3,3 +3,23 @@
     width: max-content;
     margin: 40px auto;
 }
+.description{
+    display: block;
+    background-color: #fff;
+    margin: 0 auto;
+    text-align: center;
+    width: max-content;
+}
+.stats{
+    display: flex;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    justify-content: center;
+}
+.label,.quantity{
+display: block;
+border: 1px solid black;
+width:120px;
+text-align: center;
+}
