--- a/src/Components/FriendList/FriendListItem/FriendListItem.module.css
+++ b/src/Components/FriendList/FriendListItem/FriendListItem.module.css
@@ -1,20 +1,29 @@
-.online::before{
-    content: "";
-    display: block;
-    width: 20px;
-    height: 20px;
-    background-color: green;
-    border-radius: 10px;
-margin-right: 10px;}
-    .offline::before{
-    content: "";
-    display: block;
-    width: 20px;
-    height: 20px;
-    background-color: red;
-    border-radius: 10px;
-margin-right: 10px;}
-.name{
-    font-weight: 500;
-    margin-left: 20px;
+.online::before {
+  content: '';
+  display: block;
+  width: 20px;
+  height: 20px;
+  background-color: green;
+  border-radius: 10px;
+  margin-right: 10px;
+}
+.offline::before {
+  content: '';
+  display: block;
+  width: 20px;
+  height: 20px;
+  background-color: red;
+  border-radius: 10px;
+  margin-right: 10px;
+}
+.name {
+  font-weight: 500;
+  margin-left: 20px;
+}
+.item {
+  display: flex;
+  align-items: center;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+    0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
